--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,8 +1,8 @@
 Flask==3.1.2
 Flask-Cors==6.0.1
 yfinance==0.2.43
-pandas==2.2.2
-numpy==1.26.4
-scikit-learn==1.5.1
+pandas==2.2.2 --only-binary :all:
+numpy==1.26.4 --only-binary :all:
 requests==2.32.3
+scikit-learn==1.5.1
 gunicorn==22.0.0
